[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/enemy/PlayerDetection.gd" type="Script" id=1]

[node name="PlayerDetection" type="Node2D"]
z_as_relative = false
script = ExtResource( 1 )

[node name="WallDetectorLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -50, 0 )
collide_with_areas = true

[node name="WallDetectorRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 50, 0 )
collide_with_areas = true

[node name="PlayerDetectorLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="PlayerDetectorLeft2" type="RayCast2D" parent="."]
position = Vector2( 0, -100 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="PlayerDetectorRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="PlayerDetectorRight2" type="RayCast2D" parent="."]
position = Vector2( 0, -100 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2
